--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -10,23 +10,24 @@
     font-size: 5.5rem;
     font-weight: bolder;
     text-transform: uppercase;
+    color: white;
 }
 
 #desc{
     font-family: 'Share Tech Mono', monospace;
-    color: cyan;
+    color: rgb(4, 255, 0);
 }
 
 .icons i{
     font-size: 23px;
-    color: black;
+    color: white;
     padding: 8px 15px;
     transition: 0.5s;
 }
 
 .icons i:hover{
     transition: 0.3s;
-    font-size: 30px;
+    font-size: 35px;
 }
 
 #fb:hover{
@@ -35,7 +36,7 @@
 }
 #ig:hover{
     transition: 0.3s;
-    color:blueviolet
+    color:rgb(255, 51, 0)
 }
 #ln:hover{
     transition: 0.3s;
