--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -7,9 +7,18 @@
     font-weight: 500;
     text-transform: uppercase;
 }
+.navtitle h1{
+    color:aqua
+}
 
 .navtabs{
     font-family: 'Ubuntu', sans-serif;
     font-size: 1.2rem;
     font-weight: 300;
+}
+.nav-link p{
+    color: rgba(245, 245, 245, 0.841);
+}
+.nav-link p:hover{
+    color: white;
 }
