--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Ubuntu&display=swap');
 
+.navbar{
+    background-color: #000000;
+}
+
 .navtitle{
     font-family: 'Share Tech Mono', monospace;
     font-size: 2rem;
